# Backtester-of-trading-strategies

./: .coverage  example.ipynb  pyproject.toml
backtester_framework/backtester/: __init__.py  backtester.py  result.py
backtester_framework/backtester_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backtester_framework/dash_interface/: __init__.py  app.py  layout.py  visualization.py
backtester_framework/stats/: __init__.py  core_metrics.py  performance_metrics.py  tail_metrics.py
backtester_framework/strategies/: RSI.py  __init__.py  arima.py  linear_trend.py  moving_average.py  strategy_constructor.py
data/: BTC_1d.csv  BTC_4h.csv  ETH_1d.csv  ETH_4h.csv  SOL_1d.csv  XRP_1d.csv
tests/: __init__.py  conftest.py  test_backtester.py  test_data_utils.py  test_metrics.py  test_result.py  test_strategy.py
